--- a/com.cet325.bg51az/app/src/main/AndroidManifest.xml
+++ b/com.cet325.bg51az/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.bg51az.comcet325bg51az">
 
+    <permission android:name="com.example.bg51az.comcet325bg51az.READ_DATABASE" android:protectionLevel="normal"/>
+    <permission android:name="com.example.bg51az.comcet325bg51az.WRITE_DATABASE" android:protectionLevel="normal"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
