--- a/com.cet325.bg51az/app/src/main/AndroidManifest.xml
+++ b/com.cet325.bg51az/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ListActivity"
+            android:label="Tourist List">
+        </activity>
+
     </application>
 
 </manifest>
