Currency/Weather JSON
Not currently working, getting errors for Async

--- a/com.cet325.bg51az/app/src/main/AndroidManifest.xml
+++ b/com.cet325.bg51az/app/src/main/AndroidManifest.xml
@@ -25,6 +25,16 @@
             android:label="Tourist List">
         </activity>
 
+        <activity
+            android:name=".WeatherActivity"
+            android:label="Weather Information">
+        </activity>
+
+        <activity
+            android:name=".CurrencyActivity"
+            android:label="Budget Planner">
+        </activity>
+
     </application>
 
 </manifest>
