--- a/com.cet325.bg51az/app/src/main/AndroidManifest.xml
+++ b/com.cet325.bg51az/app/src/main/AndroidManifest.xml
@@ -30,6 +30,11 @@
             android:label="Weather Information">
         </activity>
 
+        <activity
+            android:name=".AboutActivity"
+            android:label="About">
+        </activity>
+
     </application>
 
 </manifest>
